core: fix intermittent DAO test failure
Problem:
DAO test testGetAllVmNumaNodeByVmId was failing sometimes.

Fix:
Test is not assuming any positional placement for expected values.
Test is searching for expected values in returned objects.

Change-Id: I5c820d25195d92e9df61ec622339c3de696f7ed2
Bug-Url: https://bugzilla.redhat.com/1177259
Signed-off-by: Dudi Maroshi <dudi@redhat.com>